--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@ h1 {
     border-radius: 15px;
 }
 
+.displayInput {
+    text-align: right;
+    padding: 10px;
+    font-size: 30px;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    width: 355px
+}
+
 .buttons {
     
    
